--- a/e2spec-vue/src/assets/base.css
+++ b/e2spec-vue/src/assets/base.css
@@ -6,14 +6,10 @@
 :root{font-family: "NEXON Lv1";}
 
 html, body, #app{
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  flex-direction: column;
   background-color: #1f1f1f;
   color: white;
-  margin: 0; padding: 0;
-  width: 100%;
+  margin: 0; 
+  width: 100%; height: 100%;
 }
 
 .idpw{
